REPSONSIVENES: Tidied up all elements so that they display correctly on iPhone 5/SE and bigger

--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,7 @@ h5 {
 
 @media screen and (max-width: 320px) {
   .sidebar {
-     font-size: 10px;
+     font-size: 9.5px;
   }
 }
 
@@ -292,4 +292,13 @@ h5 {
 
 .plotly-formatting {
     margin-top: 30px;
+}
+
+/* ---------------------------------------------- INPUTS */
+.input-width {
+    width: 150px;
+}
+
+.input-item {
+    margin-top: 10px;
 }
